2008-07-07  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* arch/beos/Makefile.am, arch/beos/constants.h, arch/beos/ui.cc,
	arch/beos/vicemenu.cc: Added copy/paste support.

	* arch/beos/console.c: Fixed a typo.

	* arch/beos/ui_sid.cc: Added a missing variable.

	* arch/os2/ui.c: Fixed a typo.

	* arch/os2/vac++/incl/mainsrc.icc, arch/os2/watcom/mainsrc.tgt,
	arch/os2/watcom/vice.wpj, arch/win32/watcom/base.tgt,
	arch/win32/watcom/vice.wpj: Added clipboard.c to the project
	files.

	* clipboard.h: Changed the _CLIPBOARD_H define to
	_VICE_CLIPBOARD_H so that it won't interfere with the beos
	clipboard define.

	* sound.h: Fixed up to return SWORD and use int calculations
	without casts.

2008-07-04  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.23

2008-07-04  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/win32/Makefile.am: Removed vice.dsp

	* arch/win32/vice.dsw: Removed vice.dsp

	* c64/ramcart.c: Include vicii-phi1.h for vicii_read_phi1().

	* clipboard.c: Define for variable i as unsigned to prevent a
	warning.

	* arch/win32/base.dsp: Add clipboard.c so vice compiles again.

	* sound.h: changed SWORD sound_audio_mix(SWORD ch1, SWORD ch2);
	to SWORD sound_audio_mix(int ch1, int ch2).

	* gfxoutputdrv/bmpdrv.c: bmpdrv_write_memmap() now is a void
	function.

	* screenshot.c: memmap_screenshot_save() had an unused variable
	i, removed that.

	* lib.c, lib.h: lib_free() now takes a const pointer.

	* arch/unix/archdep.c: viceuserdir is now a const pointer.

	* arch/unix/tfearch.c: Removed unused TfePcapCloseAdapter()
	function.

2008-07-04  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* Makefile.am, arch/win32/ui.c, clipboard.c, clipboard.h: Moved
	the common clipboard code that Spiro made to the new common
	files called 'clipboard.c' and 'clipboard.h'.

	* arch/amigaos/c128uires.h, arch/amigaos/c64uires.h,
	arch/amigaos/cbm2uires.h, arch/amigaos/intl.c,
	arch/amigaos/intl.txt, arch/amigaos/petuires.h,