@@ -1,3 +1,10 @@
+2008-07-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
+
+	* init.c, autostart.c, autostart.h, translate.txt, translate.c:
+	Added new command-line options -autostartrunwithcolon and
+	+autostartrunwithcolon along with corresponding vicerc option
+	AutostartRunWithColon=x.
+
 2008-07-07  Marco van den Heuvel  <blackystardust68@yahoo.com>
 
 	* arch/beos/Makefile.am, arch/beos/constants.h, arch/beos/ui.cc,
